JRADEV-17998: validating summary at CopyDetails action

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -7,7 +7,7 @@
 <div id="stepped-process" class="content-container">
 	#parse("/com/atlassian/cpji/templates/steps.vm")
 	<div class="content-body aui-panel">
-		<form action="CopyIssueToInstanceAction!default.jspa" class="aui" method="post">
+		<form action="CopyDetailsAction.jspa" class="aui" method="get">
 			<h2 class="formtitle">$i18n.getText('cpji.copy.details')</h2>
 			<fieldset>
 				<div class="field-group">
@@ -37,6 +37,9 @@
 				<div class="field-group">
 					<label for="summary">$i18n.getText('common.words.summary')</label>
 					<input type="text" class="text long-field" name="summary" id="summary" value="$textutils.htmlEncode($summary)"/>
+					#if ($action.errors.summary)
+						<div class="error">$action.errors.summary</div>
+					#end
 				</div>
 			</fieldset>
 
@@ -46,7 +49,7 @@
 				#if ($action.copyCommentsSectionVisible)
 				#set ($error = $action.copyCommentsErrorMessage)
 				<div class="checkbox" id="copy-comments-group">
-					<input type="checkbox" class="checkbox" id="copy-comments" name="copyComments" value="true" #if ($error != "") disabled="" #else checked="checked" #end/>
+					<input type="checkbox" class="checkbox" id="copy-comments" name="copyComments" value="true" #if ($error != "") disabled="" #else #if($copyComments) checked="checked" #end #end/>
 					<label for="copy-comments">$i18n.getText('cpji.copy.comments')</label>
 					#if ($error != "")
                         <div class="error">$error</div>
@@ -57,7 +60,7 @@
 				#if ($action.copyAttachmentsSectionVisible)
 				#set ($isEnabled = $action.copyAttachmentsEnabled)
 				<div class="checkbox" id="copy-attachments-group">
-					<input type="checkbox" class="checkbox" id="copy-attachments" name="copyAttachments" value="true" #if (!$isEnabled) disabled="" #else checked="checked" #end/>
+					<input type="checkbox" class="checkbox" id="copy-attachments" name="copyAttachments" value="true" #if (!$isEnabled) disabled="" #else #if($copyAttachments) checked="checked" #end #end/>
 					<label for="copy-attachments">$i18n.getText('cpji.copy.attachments')</label>
 					#set ($error = $action.copyAttachmentsErrorMessage)
 					#if ($error != "")
@@ -69,7 +72,7 @@
 				#if ($action.copyIssueLinksSectionVisible)
 				#set ($error = $action.copyIssueLinksErrorMessage)
 				<div class="checkbox" id="copy-issue-links-group">
-					<input type="checkbox" class="checkbox" id="copy-issue-links" name="copyIssueLinks" value="true" #if ($error != "") disabled="" #else checked="checked" #end/>
+					<input type="checkbox" class="checkbox" id="copy-issue-links" name="copyIssueLinks" value="true" #if ($error != "") disabled="" #else #if($copyIssueLinks) checked="checked" #end #end/>
 					<label for="copy-issue-links">$i18n.getText('cpji.copy.issue.links')</label>
 					#if ($error != "")
                         <div class="error">$error</div>
@@ -84,7 +87,7 @@
 					<label for="remoteIssueLink">$i18n.getText('cpji.create.issue.link')</label>
 					<select class="singleSelect" name="remoteIssueLink" id="remoteIssueLink">
 						#foreach( $issueLink in $action.getIssueLinkOptions())
-							<option value="$textutils.htmlEncode(${issueLink.value})">$textutils.htmlEncode(${issueLink.label})</option>
+							<option value="$textutils.htmlEncode(${issueLink.value})"  #if($remoteIssueLink == $issueLink.value) selected="selected" #end >$textutils.htmlEncode(${issueLink.label})</option>
 						#end
 					</select>
 					<div class="description">$i18n.getText("cpji.creates.issue.link.between.issues")</div>
