JRADEV-18433: main buttons are now primary

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -114,7 +114,7 @@
 
 			<div class="buttons-container">
 				<div class="buttons">
-					<input type="submit" value="$i18n.getText('common.forms.next')" class="aui-button submit"/>
+					<input type="submit" value="$i18n.getText('common.forms.next')" class="aui-button aui-button-primary submit"/>
 				</div>
 			</div>
 			<input type="hidden" name="id" value="$action.id"/>
