--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
@@ -21,7 +21,7 @@
             </fieldset>
 			<div class="buttons-container">
 				<div class="buttons">
-					<input id="select-project-submit" type="submit" value="$i18n.getText('common.forms.next')" class="aui-button button submit"/>
+					<input id="select-project-submit" type="submit" value="$i18n.getText('common.forms.next')" class="aui-button aui-button-primary submit"/>
 					<a href="$req.contextPath$viewUrl" class="aui-button-cancel">$i18n.getText("common.forms.cancel")</a>
 				</div>
 			</div>
