--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copied.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copied.vm
@@ -11,7 +11,8 @@
         </div>
     </div>
 </header>
-<div id="stepped-process" class="content-container">
+<div id="stepped-process" >
+    <div class="content-container">
 	#parse("/com/atlassian/cpji/templates/steps.vm")
     <div class="content-body aui-panel">
         <div class="aui-message success"><span class="aui-icon icon-success"></span>
@@ -33,12 +34,11 @@
             </div>
 		#end
         <form action="../browse/$action.getIssueKey()" class="aui" method="get">
-            <div class="buttons-container">
-                <div class="buttons">
-                    <input type="submit" value="$i18n.getText('cpji.back.to.the.issue')" class="aui-button aui-button-primary submit"/>
-                </div>
-            </div>
+            <p>
+               <input type="submit" value="$i18n.getText('cpji.back.to.the.issue')" class="aui-button aui-button-primary submit"/>
+            </p>
         </form>
+    </div>
     </div>
 </div>
 </body>
