--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/permissionchecks.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/permissionchecks.vm
@@ -60,7 +60,7 @@
                 #if ($action.isCopyingPossible())
                 <input type="submit" value="$i18n.getText('cpji.copy.issue')" class="aui-button aui-button-primary submit"/>
                 #else
-                <input type="submit" value="$i18n.getText('common.forms.cancel')" class="aui-button submit"/>
+                <input type="submit" value="$i18n.getText('common.forms.cancel')" class="aui-button aui-button-primary submit"/>
                 #end
             </p>
             <input type="hidden" name="atl_token" value="$action.xsrfToken"/>
