JRADEV-20061: fixed CSS so the wizard looks fine in 6.0

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
@@ -23,9 +23,18 @@ form.aui {
 }
 
 #stepped-process {
+  .content-related {
+    min-width: 200px;
+  }
+
+  .content-body.aui-panel {
+    width: 100%;
+  }
+
   form.aui.confirmation {
     .fields-list {
       margin-top: 15px;
     }
   }
+
 }
