JRADEV-18289: modified "confirm new values" a bit - let's see how it will look now. and how many test will just blow up

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -16,6 +16,7 @@
 	<div class="content-body aui-panel">
 		<form action="CopyDetailsAction.jspa" class="aui" method="get">
 			<h2 class="formtitle">$i18n.getText('cpji.copy.details')</h2>
+            <p>$i18n.getText('cpji.provide.details.for.destination.issue')</p>
 			<fieldset>
 				<div class="field-group">
 					<label for="issueType">$i18n.getText('cpji.issue.type')</label>
