--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -60,7 +60,7 @@
 					<input type="checkbox" class="checkbox" id="copy-comments" name="copyComments" value="true" #if ($error != "") disabled="" #else #if($copyComments) checked="checked" #end #end/>
 					<label for="copy-comments">$i18n.getText('cpji.copy.comments')</label>
 					#if ($error != "")
-                        <div class="error">$error</div>
+                        <div>$error</div>
 					#end
 				</div>
 				#end
@@ -72,7 +72,7 @@
 					<label for="copy-attachments">$i18n.getText('cpji.copy.attachments')</label>
 					#set ($error = $action.copyAttachmentsErrorMessage)
 					#if ($error != "")
-                        <div class="error">$error</div>
+                        <div>$error</div>
 					#end
                 </div>
 				#end
@@ -83,7 +83,7 @@
 					<input type="checkbox" class="checkbox" id="copy-issue-links" name="copyIssueLinks" value="true" #if ($error != "") disabled="" #else #if($copyIssueLinks) checked="checked" #end #end/>
 					<label for="copy-issue-links">$i18n.getText('cpji.copy.issue.links')</label>
 					#if ($error != "")
-                        <div class="error">$error</div>
+                        <div>$error</div>
 					#end
 				</div>
 				#end
