--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
@@ -22,7 +22,11 @@ form.aui {
 }
 
 .unmapped-values {
-  padding: 10px; //copied from JIRA 6.0
+  padding: 10px;
+}
+
+.unmapped-values, .confirmation .field-value {
+//copied from JIRA 6.0
   .aui-lozenge.aui-lozenge-subtle {
     background-color: #FFFFFF;
     border-color: #CCCCCC;
