--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
@@ -66,7 +66,10 @@ form.aui {
         padding-right: 0.25em;
       }
     }
+  }
 
+  form.aui #copy-attachments-group .aui-icon{
+    margin-left: 0.25em;
   }
 
 }
