JRADEV-18299: displaying info icons

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
@@ -72,4 +72,18 @@ form.aui {
     margin-left: 0.25em;
   }
 
+  .aui-message.aui-message-reset-style {
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
+    .aui-icon {
+      display: inline-block;
+      position: static;
+      top: 0;
+      left: 0;
+    }
+  }
+
 }
