--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
@@ -41,7 +41,7 @@ form.aui {
     font-size: 11px;
     font-weight: bold;
     line-height: 1;
-    margin: 0;
+    margin: 0 1px;
     padding: 2px 5px 1px;
     text-align: center;
     text-decoration: none;
