JRADEV-17778: applying lozenges in 5.x

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
@@ -25,7 +25,7 @@ form.aui {
   padding: 10px;
 }
 
-.unmapped-values, .confirmation .field-value {
+.unmapped-values, .confirmation .field-value, #copy-attachments-group {
 //copied from JIRA 6.0
   .aui-lozenge.aui-lozenge-subtle {
     background-color: #FFFFFF;
