JRADEV-16429: corrected width

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
@@ -10,7 +10,10 @@
   #noDestinationProjectError {
     clear: none;
   }
+}
 
+#targetEntityLinkLoader input.text {
+  width: 350px;
 }
 
 form.aui {
